--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -5,12 +5,14 @@
     "usage": " Usage:",
     "uses": " Uses:",
     "temp-message": " Send a temp message",
-    "sent-temp-message": " sent a temp message:",
-    "change-lang-message": " change language",
-    "lang-changed": " language has been changed!",
-    "reloaded": " config and lang has been reloaded!",
+    "sent-temp-message": " Sent a temp message:",
+    "change-lang-message": " Change language",
+    "lang-changed": " Language has been changed!",
+    "reloaded": " Config and lang has been reloaded!",
     "unknown-command": " Unknown command",
     "permission-error": " You do not have any permission!",
+    "debug-enabled": " Debug mode: enabled",
+    "debug-disabled": " Debug mode: disabled",
 
     "@user": " <@user>",
     "message": " <message>",
