--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -8,7 +8,7 @@
     "sent-temp-message": " 发送了临时讯息:",
     "change-lang-message": " 更改语言",
     "lang-changed": " 语言已更改!",
-    "reloaded": " 设定档及语言已重新加载!",
+    "reloaded": " 设定档及语言档已重新加载!",
     "unknown-command": " 未知的指令",
     "permission-error": " 你没有权限!",
     "debug-enabled": " 侦错模式: 开启",
