--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -8,7 +8,7 @@
     "sent-temp-message": " 發送了臨時訊息:",
     "change-lang-message": " 更改語言",
     "lang-changed": " 語言已更改!",
-    "reloaded": " 設定檔及語言已重新加載!",
+    "reloaded": " 設定檔及語言檔已重新加載!",
     "unknown-command": " 未知的指令",
     "permission-error": " 你沒有權限!",
     "debug-enabled": " 偵錯模式: 開啟",
