--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -8,7 +8,7 @@
     "sent-temp-message": " Sent a temp message:",
     "change-lang-message": " Change language",
     "lang-changed": " Language has been changed!",
-    "reloaded": " Config and lang has been reloaded!",
+    "reloaded": " Config and language has been reloaded!",
     "unknown-command": " Unknown command",
     "permission-error": " You do not have any permission!",
     "debug-enabled": " Debug mode: enabled",
