--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -10,13 +10,18 @@
     "lang-changed": " 語言已更改!",
     "activity-changed": " 機器人狀態已更改為",
     "reloaded": " 設定檔及語言檔已重新加載!",
-    "unknown-command": " 未知的指令",
     "permission-error": " 你沒有權限!",
     "language-error": " 該語言檔不存在!",
+    "message-clear-tip": "刪除 ",
+    "message-clear-tip-count": " 則訊息",
+    "message-cleared": " 則訊息已被刪除!",
+
     "debug-enabled": " 偵錯模式: 開啟",
     "debug-disabled": " 偵錯模式: 關閉",
 
     "@user": " <@使用者>",
     "message": " <訊息>",
-    "language": " <語言>"
+    "language": " <語言檔名稱>",
+    "count": "<數量>",
+    "someone's": " 的"
 }
