--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -1,7 +1,7 @@
 {
-    "login-name": " Now login name：",
+    "login-name": "Now login name：",
     "create-channel-name": "'s channel",
-    "when-channel-create": " Created a voice channel",
+    "when-channel-create": " Created a temp voice channel",
     "usage": " Usage:",
     "uses": " Uses:",
     "temp-message": " Send a temp message",
@@ -9,6 +9,8 @@
     "change-lang-message": " Change language",
     "lang-changed": " Language have been changed!",
     "activity-changed": " activity of bot have been changed to",
+    "channel-copied": " has been copied",
+    "channel-copied-deleted": " has been copied and deleted",
     "reloaded": " Config and language have been reloaded!",
     "permission-error": " You do not have any permission!",
     "language-error": " This language file does not exist!",
@@ -21,17 +23,71 @@
     "user-unbanned": " has been successfully unbanned!",
     "user-kicked": " has been successfully kicked!",
     "user-warned": " Has been warned!",
-    "warn-reason": " Reason:",
+    "warn-reason": " Reason: ",
     "warn-amount": " Now warn amount:",
     "user-nowarn": " This user has no warnings.",
     "warn-cleared-all": " All warnings has been successfully cleared.",
+    "user-bypassed": "You cannot execute this command for this user.",
+    "bypass-added": " has been added to bypass list",
+
+    "user-info": "User Information",
+    "user-info-name": "Name",
+    "user-info-nickname": "Nickname",
+    "user-info-id": "ID",
+    "user-info-permission": "Permission",
+    "user-info-bot": "Is bot?",
+    "user-info-toprole": "Top role",
+    "user-info-warn": "Warning amount",
+    "user-info-status": "Status",
+    "user-info-activity": "Activity",
+    "user-info-create-at": "Create at",
+    "user-info-join-at": "Join at",
+    "user-info-boots": "Is server booster?",
 
     "menu-name": "Commands list",
     "menu-select": "Please select one...",
-    "selected": "Selected :  ",
+    "selected": "Selected : ",
+    "menu-message-addbypass": "Add a member to the bypass list",
+    "menu-message-ban": "ban a member",
+    "menu-message-clear": "delete the message",
+    "menu-message-chlang": "change the language for bot",
+    "menu-message-chact": "change the activity for bot",
+    "menu-message-copy": "copy current channel",
+    "menu-message-copy-delete": "copy and delete current channel",
+    "menu-message-clearwarn": "clear the warnings for member",
+    "menu-message-exit": "end the bot",
+    "menu-message-gay": "get the gay level for member",
+    "menu-message-kick": "kick a member from server",
+    "menu-message-reload": "reload the config and language file",
+    "menu-message-showwarn": "show warnings for member",
+    "menu-message-time": "get the current time",
+    "menu-message-tlm": "send a temp message",
+    "menu-message-unban": "unban a member",
+    "menu-message-uinfo": "View a member's information",
+    "menu-message-warn": "warn a member",
 
-    "debug-enabled": " Debug mode: enabled",
-    "debug-disabled": " Debug mode: disabled",
+    "music-link": "Go to link",
+    "music-pause": "Pause",
+    "music-resume": "Resume",
+    "music-stop": "Stop",
+    "music-repeat": "Repeat",
+    "music-url-error": "Please type a right url.",
+    "music-user-not-in-channel": "Please join a voice channel first.",
+    "music-playing": "Now playing: ",
+    "music-uploader": "Uploader",
+    "music-duration": "Duration",
+    "music-like_count": "Like count",
+    "music-DJ": "DJ",
+    "music-channel": "playing in",
+    "music-still-playing": "There are still music playing",
+    "music-bot-not-in-channel": "Music bot not in voice channel.",
+    "music-nothing-playing": "No music are playing",
+    "music-nothing-pause": "No music are paused",
+    "repeat-enabled": "repeat mode has beem enabled.",
+    "repeat-disabled": "repeat mode has beem disabled.",
+
+    "debug-enabled": "Debug mode: enabled",
+    "debug-disabled": "Debug mode: disabled",
 
     "@user": " [@user]",
     "message": " [message]",
