--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -1,7 +1,7 @@
 {
-    "login-name": " 目前登入身份：",
+    "login-name": "目前登入身份：",
     "create-channel-name": " 的频道",
-    "when-channel-create": " 建立了语音频道",
+    "when-channel-create": " 建立了临时语音频道",
     "usage": " 用法:",
     "uses": " 用途:",
     "temp-message": " 发送一个临时讯息",
@@ -9,6 +9,8 @@
     "change-lang-message": " 更改语言",
     "lang-changed": " 语言已更改!",
     "activity-changed": " 机器人状态已更改为",
+    "channel-copied": " 频道已被复制",
+    "channel-copied-deleted": " 频道已被复制及删除",
     "reloaded": " 设定档及语言档已重新加载!",
     "permission-error": " 你没有权限!",
     "language-error": " 该语言档不存在!",
@@ -21,17 +23,71 @@
     "user-unbanned": " 已解除封锁!",
     "user-kicked": " 已被踢出伺服器!",
     "user-warned": " 已被警告!",
-    "warn-reason": " 原因:",
+    "warn-reason": " 原因: ",
     "warn-amount": " 警告次数:",
     "user-nowarn": " 该用户没有警告",
     "warn-cleared-all": " 已清除所有警告",
+    "user-bypassed": "你不能对此用户执行此指令",
+    "bypass-added": " 已被加入忽略名单",
+
+    "user-info": "成员资讯",
+    "user-info-name": "名称",
+    "user-info-nickname": "昵称",
+    "user-info-id": "ID",
+    "user-info-permission": "权限",
+    "user-info-bot": "机器人?",
+    "user-info-toprole": "最高身分组",
+    "user-info-warn": "警告数量",
+    "user-info-status": "上线状态",
+    "user-info-activity": "活动",
+    "user-info-create-at": "创建于",
+    "user-info-join-at": "加入于",
+    "user-info-boots": "加成伺服器?",
 
     "menu-name": "指令列表",
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
-    
-    "debug-enabled": " 侦错模式: 开启",
-    "debug-disabled": " 侦错模式: 关闭",
+    "menu-message-addbypass": "新增一个成员至忽略列表",
+    "menu-message-ban": "封锁一个成员",
+    "menu-message-clear": "删除讯息",
+    "menu-message-chlang": "更改机器人语言",
+    "menu-message-chact": "更改机器人状态",
+    "menu-message-copy": "复制当前频道",
+    "menu-message-copy-delete": "复制并删除当前频道",
+    "menu-message-clearwarn": "清除某成员警告",
+    "menu-message-exit": "结束机器人程式",
+    "menu-message-gay": "获取成员同性恋值",
+    "menu-message-kick": "从伺服器踢出一位玩家",
+    "menu-message-reload": "重新加载设定及语言档",
+    "menu-message-showwarn": "显示某成员的警告数量",
+    "menu-message-time": "获取当前时间",
+    "menu-message-tlm": "发送临时讯息",
+    "menu-message-unban": "解除封锁一个成员",
+    "menu-message-uinfo": "查看一个成员的资讯",
+    "menu-message-warn": "警告一个成员",
+
+    "music-link": "前往连结",
+    "music-pause": "暂停歌曲",
+    "music-resume": "继续播放",
+    "music-stop": "停止播放",
+    "music-repeat": "循环播放",
+    "music-url-error": "未输入欲播放歌曲网址",
+    "music-user-not-in-channel": "请先加入语音频道",
+    "music-playing": "正在播放: ",
+    "music-uploader": "上传者",
+    "music-duration": "时长",
+    "music-like_count": "按赞数",
+    "music-DJ": "播放者",
+    "music-channel": "播放频道",
+    "music-still-playing": "尚有歌曲正在播放",
+    "music-bot-not-in-channel": "音乐机器人未在语音频道中",
+    "music-nothing-playing": "没有歌曲正在播放中",
+    "music-nothing-pause": "没有歌曲被暂停",
+    "repeat-enabled": "循环播放模式已开启",
+    "repeat-disabled": "循环播放模式已关闭",
+
+    "debug-enabled": "侦错模式: 开启",
+    "debug-disabled": "侦错模式: 关闭",
 
     "@user": " [@使用者]",
     "message": " [讯息]",
