--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -1,7 +1,7 @@
 {
-    "login-name": " 目前登入身份：",
+    "login-name": "目前登入身份：",
     "create-channel-name": " 的頻道",
-    "when-channel-create": " 建立了語音頻道",
+    "when-channel-create": " 建立了臨時語音頻道",
     "usage": " 用法:",
     "uses": " 用途:",
     "temp-message": " 發送一個臨時訊息",
@@ -9,6 +9,8 @@
     "change-lang-message": " 更改語言",
     "lang-changed": " 語言已更改!",
     "activity-changed": " 機器人狀態已更改為",
+    "channel-copied": " 頻道已被複製",
+    "channel-copied-deleted": " 頻道已被複製及刪除",
     "reloaded": " 設定檔及語言檔已重新加載!",
     "permission-error": " 你沒有權限!",
     "language-error": " 該語言檔不存在!",
@@ -21,17 +23,71 @@
     "user-unbanned": " 已解除封鎖!",
     "user-kicked": " 已被踢出伺服器!",
     "user-warned": " 已被警告!",
-    "warn-reason": " 原因:",
+    "warn-reason": " 原因: ",
     "warn-amount": " 警告次數:",
     "user-nowarn": " 該用戶沒有警告",
     "warn-cleared-all": " 已清除所有警告",
+    "user-bypassed": "你不能對此用戶執行此指令",
+    "bypass-added": " 已被加入忽略名單",
+
+    "user-info": "成員資訊",
+    "user-info-name": "名稱",
+    "user-info-nickname": "暱稱",
+    "user-info-id": "ID",
+    "user-info-permission": "權限",
+    "user-info-bot": "機器人?",
+    "user-info-toprole": "最高身分組",
+    "user-info-warn": "警告數量",
+    "user-info-status": "上線狀態",
+    "user-info-activity": "活動",
+    "user-info-create-at": "創建於",
+    "user-info-join-at": "加入於",
+    "user-info-boots": "加成伺服器?",
 
     "menu-name": "指令列表",
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
+    "menu-message-addbypass": "新增一個成員至忽略列表",
+    "menu-message-ban": "封鎖一個成員",
+    "menu-message-clear": "刪除訊息",
+    "menu-message-chlang": "更改機器人語言",
+    "menu-message-chact": "更改機器人狀態",
+    "menu-message-copy": "複製當前頻道",
+    "menu-message-copy-delete": "複製並刪除當前頻道",
+    "menu-message-clearwarn": "清除某成員警告",
+    "menu-message-exit": "結束機器人程式",
+    "menu-message-gay": "獲取成員同性戀值",
+    "menu-message-kick": "從伺服器踢出一位玩家",
+    "menu-message-reload": "重新加載設定及語言檔",
+    "menu-message-showwarn": "顯示某成員的警告數量",
+    "menu-message-time": "獲取當前時間",
+    "menu-message-tlm": "發送臨時訊息",
+    "menu-message-unban": "解除封鎖一個成員",
+    "menu-message-uinfo": "查看一個成員的資訊",
+    "menu-message-warn": "警告一個成員",
 
-    "debug-enabled": " 偵錯模式: 開啟",
-    "debug-disabled": " 偵錯模式: 關閉",
+    "music-link": "前往連結",
+    "music-pause": "暫停歌曲",
+    "music-resume": "繼續播放",
+    "music-stop": "停止播放",
+    "music-repeat": "循環播放",
+    "music-url-error": "未輸入欲播放歌曲網址",
+    "music-user-not-in-channel": "請先加入語音頻道",
+    "music-playing": "正在播放: ",
+    "music-uploader": "上傳者",
+    "music-duration": "時長",
+    "music-like_count": "按讚數",
+    "music-DJ": "播放者",
+    "music-channel": "播放頻道",
+    "music-still-playing": "尚有歌曲正在播放",
+    "music-bot-not-in-channel": "音樂機器人未在語音頻道中",
+    "music-nothing-playing": "沒有歌曲正在播放中",
+    "music-nothing-pause": "沒有歌曲被暫停",
+    "repeat-enabled": "循環播放模式已開啟",
+    "repeat-disabled": "循環播放模式已關閉",
+
+    "debug-enabled": "偵錯模式: 開啟",
+    "debug-disabled": "偵錯模式: 關閉",
 
     "@user": " [@使用者]",
     "message": " [訊息]",
