--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -28,7 +28,12 @@
     "user-nowarn": " This user has no warnings.",
     "warn-cleared-all": " All warnings has been successfully cleared.",
     "user-bypassed": "You cannot execute this command for this user.",
+    "admin-added": " has been added to administrator list",
     "bypass-added": " has been added to bypass list",
+    "admin-removed": " has been removed from administrator list",
+    "bypass-removed": " has been removed from bypass list",
+    "not-in-admin": "The user is not in the administrator list",
+    "not-in-bypass": "The user is not in the bypass list",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -47,6 +52,7 @@
     "menu-name": "Commands list",
     "menu-select": "Please select one...",
     "selected": "Selected : ",
+    "menu-message-addadmin": "Add a member to the administrator list",
     "menu-message-addbypass": "Add a member to the bypass list",
     "menu-message-ban": "ban a member",
     "menu-message-clear": "delete the message",
@@ -59,6 +65,8 @@
     "menu-message-gay": "get the gay level for member",
     "menu-message-kick": "kick a member from server",
     "menu-message-reload": "reload the config and language file",
+    "menu-message-removeadmin": "remove a member from the administrator list",
+    "menu-message-removebypass": "remove a member from the bypass list",
     "menu-message-showwarn": "show warnings for member",
     "menu-message-time": "get the current time",
     "menu-message-tlm": "send a temp message",
