--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -28,7 +28,12 @@
     "user-nowarn": " 该用户没有警告",
     "warn-cleared-all": " 已清除所有警告",
     "user-bypassed": "你不能对此用户执行此指令",
+    "admin-added": " 已被加入管理员名单",
     "bypass-added": " 已被加入忽略名单",
+    "admin-removed": " 已从管理员名单中移除",
+    "bypass-removed": " 已从忽略名单中移除",
+    "not-in-admin": "该使用者未在管理员名单中",
+    "not-in-bypass": "该使用者未在忽略名单中",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -47,7 +52,8 @@
     "menu-name": "指令列表",
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
-    "menu-message-addbypass": "新增一个成员至忽略列表",
+    "menu-message-addadmin": "新增一个成员至管理员名单",
+    "menu-message-addbypass": "新增一个成员至忽略名单",
     "menu-message-ban": "封锁一个成员",
     "menu-message-clear": "删除讯息",
     "menu-message-chlang": "更改机器人语言",
@@ -59,6 +65,8 @@
     "menu-message-gay": "获取成员同性恋值",
     "menu-message-kick": "从伺服器踢出一位玩家",
     "menu-message-reload": "重新加载设定及语言档",
+    "menu-message-removeadmin": "从管理员名单中移除一个成员",
+    "menu-message-removebypass": "从忽略名单中移除一个成员",
     "menu-message-showwarn": "显示某成员的警告数量",
     "menu-message-time": "获取当前时间",
     "menu-message-tlm": "发送临时讯息",
