--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -28,7 +28,12 @@
     "user-nowarn": " 該用戶沒有警告",
     "warn-cleared-all": " 已清除所有警告",
     "user-bypassed": "你不能對此用戶執行此指令",
+    "admin-added": " 已被加入管理員名單",
     "bypass-added": " 已被加入忽略名單",
+    "admin-removed": " 已從管理員名單中移除",
+    "bypass-removed": " 已從忽略名單中移除",
+    "not-in-admin": "該使用者未在管理員名單中",
+    "not-in-bypass": "該使用者未在忽略名單中",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -47,7 +52,8 @@
     "menu-name": "指令列表",
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
-    "menu-message-addbypass": "新增一個成員至忽略列表",
+    "menu-message-addadmin": "新增一個成員至管理員名單",
+    "menu-message-addbypass": "新增一個成員至忽略名單",
     "menu-message-ban": "封鎖一個成員",
     "menu-message-clear": "刪除訊息",
     "menu-message-chlang": "更改機器人語言",
@@ -59,6 +65,8 @@
     "menu-message-gay": "獲取成員同性戀值",
     "menu-message-kick": "從伺服器踢出一位玩家",
     "menu-message-reload": "重新加載設定及語言檔",
+    "menu-message-removeadmin": "從管理員名單中移除一個成員",
+    "menu-message-removebypass": "從忽略名單中移除一個成員",
     "menu-message-showwarn": "顯示某成員的警告數量",
     "menu-message-time": "獲取當前時間",
     "menu-message-tlm": "發送臨時訊息",
