--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -22,11 +22,14 @@
     "user-banned": " has been successfully banned!",
     "user-unbanned": " has been successfully unbanned!",
     "user-kicked": " has been successfully kicked!",
-    "user-warned": " Has been warned!",
+    "user-warned": " has been warned!",
     "warn-reason": " Reason: ",
     "warn-amount": " Now warn amount:",
     "user-nowarn": " This user has no warnings.",
     "warn-cleared-all": " All warnings has been successfully cleared.",
+    "mute-role-name": "muted",
+    "user-muted": " has been muted!",
+    "user-unmuted": " has been unmuted!",
     "user-bypassed": "You cannot execute this command for this user.",
     "admin-added": " has been added to administrator list",
     "bypass-added": " has been added to bypass list",
@@ -36,6 +39,10 @@
     "not-in-bypass": "The user is not in the bypass list",
     "admin-had": " This user is already in the administrator list",
     "bypass-had": " This user is already in the bypass list",
+    "when-warnings-match": "Warnings have been reached the ",
+    "auto-mute-message": " times, muted",
+    "auto-kick-message": " times, kicked",
+    "auto-ban-message": " times, banned",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -66,6 +73,7 @@
     "menu-message-exit": "end the bot",
     "menu-message-gay": "get the gay level for member",
     "menu-message-kick": "kick a member from server",
+    "menu-message-mute": "mute a member",
     "menu-message-reload": "reload the config and language file",
     "menu-message-removeadmin": "remove a member from the administrator list",
     "menu-message-removebypass": "remove a member from the bypass list",
@@ -73,6 +81,7 @@
     "menu-message-time": "get the current time",
     "menu-message-tlm": "send a temp message",
     "menu-message-unban": "unban a member",
+    "menu-message-unmute": "unmute a member",
     "menu-message-uinfo": "View a member's information",
     "menu-message-warn": "warn a member",
 
@@ -95,6 +104,8 @@
     "music-nothing-pause": "No music are paused",
     "repeat-enabled": "repeat mode has beem enabled.",
     "repeat-disabled": "repeat mode has beem disabled.",
+    "volume-changed": "Volume adjusted from ",
+    "volume-changed-to": " to ",
 
     "debug-enabled": "Debug mode: enabled",
     "debug-disabled": "Debug mode: disabled",
