--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -12,7 +12,7 @@
     "channel-copied": " 频道已被复制",
     "channel-copied-deleted": " 频道已被复制及删除",
     "reloaded": " 设定档及语言档已重新加载!",
-    "permission-error": " 你没有权限!",
+    "permission-error": " 拒绝不符权限的操作",
     "language-error": " 该语言档不存在!",
     "reset-error": " 此指令需开启侦错模式才能执行!",
     "not-owner": " 此指令只有伺服器拥有者才能执行!",
@@ -27,15 +27,22 @@
     "warn-amount": " 警告次数:",
     "user-nowarn": " 该用户没有警告",
     "warn-cleared-all": " 已清除所有警告",
+    "mute-role-name": "已被禁言",
+    "user-muted": " 已被禁言",
+    "user-unmuted": " 已解除禁言",
     "user-bypassed": "你不能对此用户执行此指令",
     "admin-added": " 已被加入管理员名单",
-    "bypass-added": " 已被加入忽略名单",
+    "bypass-added": " 已被加入绕过名单",
     "admin-removed": " 已从管理员名单中移除",
-    "bypass-removed": " 已从忽略名单中移除",
+    "bypass-removed": " 已从绕过名单中移除",
     "not-in-admin": "该使用者未在管理员名单中",
-    "not-in-bypass": "该使用者未在忽略名单中",
+    "not-in-bypass": "该使用者未在绕过名单中",
     "admin-had": " 该使用者已拥有管理员身分",
-    "bypass-had": " 该使用者已在忽略名单",
+    "bypass-had": " 该使用者已在绕过名单",
+    "when-warnings-match": "警告已达 ",
+    "auto-mute-message": " 支，已被禁言",
+    "auto-kick-message": " 支，已被踢出伺服器",
+    "auto-ban-message": " 支，已被伺服器封锁",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -55,7 +62,7 @@
     "menu-select": "请选择一项...",
     "selected": "已选择  ",
     "menu-message-addadmin": "新增一个成员至管理员名单",
-    "menu-message-addbypass": "新增一个成员至忽略名单",
+    "menu-message-addbypass": "新增一个成员至绕过名单",
     "menu-message-ban": "封锁一个成员",
     "menu-message-clear": "删除讯息",
     "menu-message-chlang": "更改机器人语言",
@@ -66,13 +73,15 @@
     "menu-message-exit": "结束机器人程式",
     "menu-message-gay": "获取成员同性恋值",
     "menu-message-kick": "从伺服器踢出一位玩家",
+    "menu-message-mute": "将一位成员禁言",
     "menu-message-reload": "重新加载设定及语言档",
     "menu-message-removeadmin": "从管理员名单中移除一个成员",
-    "menu-message-removebypass": "从忽略名单中移除一个成员",
+    "menu-message-removebypass": "从绕过名单中移除一个成员",
     "menu-message-showwarn": "显示某成员的警告数量",
     "menu-message-time": "获取当前时间",
     "menu-message-tlm": "发送临时讯息",
     "menu-message-unban": "解除封锁一个成员",
+    "menu-message-unmute": "将一位成员解除禁言",
     "menu-message-uinfo": "查看一个成员的资讯",
     "menu-message-warn": "警告一个成员",
 
@@ -95,6 +104,8 @@
     "music-nothing-pause": "没有歌曲被暂停",
     "repeat-enabled": "循环播放模式已开启",
     "repeat-disabled": "循环播放模式已关闭",
+    "volume-changed": "音量已由 ",
+    "volume-changed-to": " 调整为 ",
 
     "debug-enabled": "侦错模式: 开启",
     "debug-disabled": "侦错模式: 关闭",
