--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -12,7 +12,7 @@
     "channel-copied": " 頻道已被複製",
     "channel-copied-deleted": " 頻道已被複製及刪除",
     "reloaded": " 設定檔及語言檔已重新加載!",
-    "permission-error": " 你沒有權限!",
+    "permission-error": " 拒絕不符權限的操作",
     "language-error": " 該語言檔不存在!",
     "reset-error": " 此指令需開啟偵錯模式才能執行!",
     "not-owner": " 此指令只有伺服器擁有者才能執行!",
@@ -27,15 +27,22 @@
     "warn-amount": " 警告次數:",
     "user-nowarn": " 該用戶沒有警告",
     "warn-cleared-all": " 已清除所有警告",
+    "mute-role-name": "已被禁言",
+    "user-muted": " 已被禁言",
+    "user-unmuted": " 已解除禁言",
     "user-bypassed": "你不能對此用戶執行此指令",
     "admin-added": " 已被加入管理員名單",
-    "bypass-added": " 已被加入忽略名單",
+    "bypass-added": " 已被加入繞過名單",
     "admin-removed": " 已從管理員名單中移除",
-    "bypass-removed": " 已從忽略名單中移除",
+    "bypass-removed": " 已從繞過名單中移除",
     "not-in-admin": "該使用者未在管理員名單中",
-    "not-in-bypass": "該使用者未在忽略名單中",
+    "not-in-bypass": "該使用者未在繞過名單中",
     "admin-had": " 該使用者已擁有管理員身分",
-    "bypass-had": " 該使用者已在忽略名單",
+    "bypass-had": " 該使用者已在繞過名單",
+    "when-warnings-match": "警告已達 ",
+    "auto-mute-message": " 支，已被禁言",
+    "auto-kick-message": " 支，已被踢出伺服器",
+    "auto-ban-message": " 支，已被伺服器封鎖",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -55,7 +62,7 @@
     "menu-select": "請選擇一項...",
     "selected": "已選擇  ",
     "menu-message-addadmin": "新增一個成員至管理員名單",
-    "menu-message-addbypass": "新增一個成員至忽略名單",
+    "menu-message-addbypass": "新增一個成員至繞過名單",
     "menu-message-ban": "封鎖一個成員",
     "menu-message-clear": "刪除訊息",
     "menu-message-chlang": "更改機器人語言",
@@ -66,13 +73,15 @@
     "menu-message-exit": "結束機器人程式",
     "menu-message-gay": "獲取成員同性戀值",
     "menu-message-kick": "從伺服器踢出一位玩家",
+    "menu-message-mute": "將一位成員禁言",
     "menu-message-reload": "重新加載設定及語言檔",
     "menu-message-removeadmin": "從管理員名單中移除一個成員",
-    "menu-message-removebypass": "從忽略名單中移除一個成員",
+    "menu-message-removebypass": "從繞過名單中移除一個成員",
     "menu-message-showwarn": "顯示某成員的警告數量",
     "menu-message-time": "獲取當前時間",
     "menu-message-tlm": "發送臨時訊息",
     "menu-message-unban": "解除封鎖一個成員",
+    "menu-message-unmute": "將一位成員解除禁言",
     "menu-message-uinfo": "查看一個成員的資訊",
     "menu-message-warn": "警告一個成員",
 
@@ -95,6 +104,8 @@
     "music-nothing-pause": "沒有歌曲被暫停",
     "repeat-enabled": "循環播放模式已開啟",
     "repeat-disabled": "循環播放模式已關閉",
+    "volume-changed": "音量已由 ",
+    "volume-changed-to": " 調整為 ",
 
     "debug-enabled": "偵錯模式: 開啟",
     "debug-disabled": "偵錯模式: 關閉",
