--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -96,11 +96,13 @@
     "music-pause": "Pause",
     "music-resume": "Resume",
     "music-stop": "Stop",
+    "music-list": "Play list",
     "music-repeat": "Repeat",
     "music-skip": "Skip",
+    "music-mute": "Mute",
     "music-url-error": "Please type a right url.",
     "music-user-not-in-channel": "Please join a voice channel first.",
-    "music-playing": "Now playing: ",
+    "music-playing": "Now playing... ",
     "music-uploader": "Uploader",
     "music-duration": "Duration",
     "music-like_count": "Like count",
