--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -96,11 +96,13 @@
     "music-pause": "暫停歌曲",
     "music-resume": "繼續播放",
     "music-stop": "停止播放",
+    "music-list": "播放列表",
     "music-repeat": "循環播放",
     "music-skip": "下一首",
+    "music-mute": "靜音",
     "music-url-error": "未輸入欲播放歌曲網址",
     "music-user-not-in-channel": "請先加入語音頻道",
-    "music-playing": "正在播放: ",
+    "music-playing": "正在播放... ",
     "music-uploader": "上傳者",
     "music-duration": "時長",
     "music-like_count": "按讚數",
