--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -96,11 +96,13 @@
     "music-pause": "暂停歌曲",
     "music-resume": "继续播放",
     "music-stop": "停止播放",
+    "music-list": "播放列表",
     "music-repeat": "循环播放",
     "music-skip": "下一首",
+    "music-mute": "静音",
     "music-url-error": "未输入欲播放歌曲网址",
     "music-user-not-in-channel": "请先加入语音频道",
-    "music-playing": "正在播放: ",
+    "music-playing": "正在播放... ",
     "music-uploader": "上传者",
     "music-duration": "时长",
     "music-like_count": "按赞数",
